Aded header, main, h1 tags to the document

--- a/index.html
+++ b/index.html
@@ -52,5 +52,10 @@
 	</style>
 </head>
 <body>
+	<header>
+		<h1>Виконані домашні завдання Павла Рожко.</h1>
+	</header>
+	<main>
+	</main>
 </body>
 </html>
