--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -49,13 +49,32 @@
 			padding-top: 10px;
 			padding-bottom: 10px;
 		}
+
+		a {
+			color: inherit;
+			text-decoration: none;
+		}
+
+		.container {
+			max-width: 1100px;
+			padding-left: 15px;
+			padding-right: 15px;
+			margin: 0 auto;
+		}
 	</style>
 </head>
 <body>
-	<header>
-		<h1>Виконані домашні завдання Павла Рожко.</h1>
-	</header>
-	<main>
-	</main>
+	<div class="container">
+		<header>
+			<h1>Виконані домашні завдання Павла Рожко.</h1>
+		</header>
+		<main>
+			<ul>
+				<li>
+					<a href="./lesson2/index.html">Домашнє завдання №2.</a>
+				</li>
+			</ul>
+		</main>
+	</div>
 </body>
 </html>
