--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,9 +15,9 @@
 			border: none;
 		}
 
-		li {
+		/* li {
 			list-style: none;
-		}
+		} */
 
 		h1,
 		h2,
@@ -49,9 +49,39 @@
 			padding-top: 10px;
 			padding-bottom: 10px;
 		}
+
+		a {
+			color: inherit;
+			text-decoration: none;
+		}
+
+		.container {
+			max-width: 1100px;
+			margin: 0 auto;
+			padding-left: 15px;
+			padding-right: 15px;
+		}
 	</style>
 </head>
 <body>
-
+	<div class="container">
+		<h1>Урок №2.</h1>
+		<ol>
+			<li>
+				<h3>
+					<a href="./tasks/task1.html">Задча №0.</a>
+				</h3>
+				<p>
+					Обчислити значення виразів.
+				</p>
+				<ol>
+					<li>S1=a+12+b</li>
+					<li>S2=a+b2a</li>
+					<li>S3=3(a+b)c</li>
+					<li>S4=sin(a-b)</li>
+				</ol>
+			</li>
+		</ol>
+	</div>
 </body>
 </html>
