--- a/lesson2/tasks/task1.html
+++ b/lesson2/tasks/task1.html
@@ -15,8 +15,12 @@
 			border: none;
 		}
 
-		li {
+		/* li {
 			list-style: none;
+		} */
+		a {
+			color: inherit;
+			text-decoration: none;
 		}
 
 		h1,
@@ -49,9 +53,46 @@
 			padding-top: 10px;
 			padding-bottom: 10px;
 		}
+
+		.container {
+			max-width: 1100px;
+			margin: 0 auto;
+			padding-left: 15px;
+			padding-right: 15px;
+		}
 	</style>
 </head>
 <body>
+	<div class="container">
+		<h1>Задача №0.Обчислити значення виразів.</h1>
+		<ol>
+			<li>S1=a+12+b</li>
+			<li>S2=a+b2a</li>
+			<li>S3=3(a+b)c</li>
+			<li>S4=sin(a-b)</li>
+		</ol>
+		<script>
+			//1. Просвоєння значення змінній c
+			let c = 12
 
+			//2. Вводимо дані необхідні дані для змінних a і b
+			let a = parseInt(prompt('Введіть ціле число', '1'))
+			let b = parseInt(prompt('Введіть ціле число', '1'))
+
+			//3. Обчислюємо вирази 
+			let s1 = a + c + b
+			let s2 = Math.sqrt((a + b) / (2 * a))
+			let s3 = Math.cbrt((a + b) * c)
+			let s4 = Math.sin(a / -b)
+
+			//4. Виводимо результат обчислення виразів
+			document.write(`
+				S1 = ${s1} <br>
+				S2 = ${s2} <br>
+				S3 = ${s3} <br>
+				S4 = ${s4} <br>
+			`)
+		</script>
+	</div>
 </body>
 </html>
