--- a/lesson2/tasks/task1.html
+++ b/lesson2/tasks/task1.html
@@ -66,10 +66,10 @@
 	<div class="container">
 		<h1>Задача №0.Обчислити значення виразів.</h1>
 		<ol>
-			<li>S1=a+12+b</li>
-			<li>S2=a+b2a</li>
-			<li>S3=3(a+b)c</li>
-			<li>S4=sin(a-b)</li>
+			<li>S<sub>1</sub>=a+12+b</li>
+			<li>S<sub>2</sub>=√(a+b/2a)</li>
+			<li>S<sub>3</sub>=∛(a+b)c</li>
+			<li>S<sub>4</sub>=sin(a/-b)</li>
 		</ol>
 		<script>
 			//1. Просвоєння значення змінній c
@@ -80,17 +80,17 @@
 			let b = parseInt(prompt('Введіть ціле число', '1'))
 
 			//3. Обчислюємо вирази 
-			let s1 = a + c + b
-			let s2 = Math.sqrt((a + b) / (2 * a))
-			let s3 = Math.cbrt((a + b) * c)
-			let s4 = Math.sin(a / -b)
+			let totalSum = a + c + b
+			let squareRoot = Math.sqrt((a + b) / (2 * a))
+			let cubeRoot = Math.cbrt((a + b) * c)
+			let sine = Math.sin(a / -b)
 
 			//4. Виводимо результат обчислення виразів
 			document.write(`
-				S1 = ${s1} <br>
-				S2 = ${s2} <br>
-				S3 = ${s3} <br>
-				S4 = ${s4} <br>
+				S<sub>1</sub> = ${totalSum} <br>
+				S<sub>2</sub> = ${squareRoot} <br>
+				S<sub>3</sub> = ${cubeRoot} <br>
+				S<sub>4</sub> = ${sine} <br>
 			`)
 		</script>
 	</div>
