Finished second task

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -68,18 +68,17 @@
 		<h1>Урок №2.</h1>
 		<ol>
 			<li>
-				<h3>
-					<a href="./tasks/task1.html">Задча №0.</a>
-				</h3>
-				<p>
-					Обчислити значення виразів.
-				</p>
+				<a href="./tasks/task1.html">Задча №0. Обчислити значення виразів.</a>
 				<ol>
 					<li>S1=a+12+b</li>
 					<li>S2=a+b2a</li>
 					<li>S3=3(a+b)c</li>
 					<li>S4=sin(a-b)</li>
 				</ol>
+			</li>
+			<li>
+				<a href="./tasks/task2.html">Задача №1. Знайти суму, добуток та частку двох дійсних чисел. Результат вивести у
+					формі таблиці.</a>
 			</li>
 		</ol>
 	</div>
