--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -80,6 +80,10 @@
 				<a href="./tasks/task2.html">Задача №1. Знайти суму, добуток та частку двох дійсних чисел. Результат вивести у
 					формі таблиці.</a>
 			</li>
+			<li>
+				<a href="./tasks/task2.html">Задача №3. Дано вартість одиниці товару і кількість. Знайти загальну вартість та
+					ПДВ (5% від загальної вартості).</a>
+			</li>
 		</ol>
 	</div>
 </body>
