--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -70,10 +70,10 @@
 			<li>
 				<a href="./tasks/task1.html">Задча №0. Обчислити значення виразів.</a>
 				<ol>
-					<li>S1=a+12+b</li>
-					<li>S2=a+b2a</li>
-					<li>S3=3(a+b)c</li>
-					<li>S4=sin(a-b)</li>
+					<li>S<sub>1</sub>=a+12+b</li>
+					<li>S<sub>2</sub>=√(a+b/2a)</li>
+					<li>S<sub>3</sub>=∛(a+b)c</li>
+					<li>S<sub>4</sub>=sin(a/-b)</li>
 				</ol>
 			</li>
 			<li>
