--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -81,6 +81,10 @@
 					формі таблиці.</a>
 			</li>
 			<li>
+				<a href="./tasks/task3.html">Задача 2. Дано рік народження (дата: 1 січня) та поточний рік. Знайти кількість
+					років.</a>
+			</li>
+			<li>
 				<a href="./tasks/task4.html">Задача №3. Дано вартість одиниці товару і кількість. Знайти загальну вартість та
 					ПДВ (5% від загальної вартості).</a>
 			</li>
