change text in third task

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -81,7 +81,7 @@
 					формі таблиці.</a>
 			</li>
 			<li>
-				<a href="./tasks/task3.html">Задача 2. Дано рік народження (дата: 1 січня) та поточний рік. Знайти кількість
+				<a href="./tasks/task3.html">Задача № 2. Дано рік народження (дата: 1 січня) та поточний рік. Знайти кількість
 					років.</a>
 			</li>
 			<li>
