added new link for fifth task

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -88,6 +88,10 @@
 				<a href="./tasks/task4.html">Задача №3. Дано вартість одиниці товару і кількість. Знайти загальну вартість та
 					ПДВ (5% від загальної вартості).</a>
 			</li>
+			<li>
+				<a href="./tasks/task4.html">Задача №4. Дано довжину у сантиметрах. Визначати скільки це метрів і
+					кілометрів.</a>
+			</li>
 		</ol>
 	</div>
 </body>
