add link to sixth task

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -92,6 +92,10 @@
 				<a href="./tasks/task5.html">Задача №4. Дано довжину у сантиметрах. Визначати скільки це метрів і
 					кілометрів.</a>
 			</li>
+			<li>
+				<a href="./tasks/task6.html">Задача №5. Дано кількість секунд, що пройшла від початку доби. Визначити скільки це
+					годин і хвилин.</a>
+			</li>
 		</ol>
 	</div>
 </body>
