add new link for seventh task

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -96,6 +96,11 @@
 				<a href="./tasks/task6.html">Задача №5. Дано кількість секунд, що пройшла від початку доби. Визначити скільки це
 					годин і хвилин.</a>
 			</li>
+			<li>
+				<a href="./tasks/task7.html">Задача №6. З клавіатури вводяться вартість товару та кількість одиниць 3 товарів.
+					Обчислити вартість кожного товару
+					окремо та загальну вартість. Вивести чек (як у супермаркеті) використовуючи елементи розмітки.</a>
+			</li>
 		</ol>
 	</div>
 </body>
