add new link for eight task

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -101,6 +101,10 @@
 					Обчислити вартість кожного товару
 					окремо та загальну вартість. Вивести чек (як у супермаркеті) використовуючи елементи розмітки.</a>
 			</li>
+			<li>
+				<a href="./tasks/task8.html">Задача 8. Знайти суму випадкового номера місяця (від 1 до 12) та випадкового номера
+					дня (від 0 до 6).</a>
+			</li>
 		</ol>
 	</div>
 </body>
