add color for links and hover effect

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
 		a {
 			color: inherit;
 			text-decoration: none;
+			color: #7289da;
+			transition: color 0.3s ease 0s;
+		}
+
+		a:hover {
+			color: #99aab5;
 		}
 
 		.container {
@@ -72,7 +78,7 @@
 		<main>
 			<ul>
 				<li>
-					<a href="./lesson2/index.html">Домашнє завдання №2.</a>
+					<a href="./lesson2/index.html">Домашні завдання урок №2.</a>
 				</li>
 			</ul>
 		</main>
