--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -54,6 +54,12 @@
 		a {
 			color: inherit;
 			text-decoration: none;
+			color: #7289da;
+			transition: color 0.3s ease 0s;
+		}
+
+		a:hover {
+			color: #99aab5;
 		}
 
 		.container {
