add attribute target _black to links

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 		<main>
 			<ul>
 				<li>
-					<a href="./lesson2/index.html">Домашні завдання урок №2.</a>
+					<a target="_blank" href="./lesson2/index.html">Домашні завдання урок №2.</a>
 				</li>
 			</ul>
 		</main>
