--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -75,7 +75,7 @@
 		<h1>Урок №2.</h1>
 		<ol>
 			<li>
-				<a href="./tasks/task1.html">Задча №0. Обчислити значення виразів.</a>
+				<a target="_blank" href="./tasks/task1.html">Задча №0. Обчислити значення виразів.</a>
 				<ol>
 					<li>S<sub>1</sub>=a+12+b</li>
 					<li>S<sub>2</sub>=√(a+b/2a)</li>
@@ -84,32 +84,39 @@
 				</ol>
 			</li>
 			<li>
-				<a href="./tasks/task2.html">Задача №1. Знайти суму, добуток та частку двох дійсних чисел. Результат вивести у
+				<a target="_blank" href="./tasks/task2.html">Задача №1. Знайти суму, добуток та частку двох дійсних чисел.
+					Результат вивести у
 					формі таблиці.</a>
 			</li>
 			<li>
-				<a href="./tasks/task3.html">Задача № 2. Дано рік народження (дата: 1 січня) та поточний рік. Знайти кількість
+				<a target="_blank" href="./tasks/task3.html">Задача № 2. Дано рік народження (дата: 1 січня) та поточний рік.
+					Знайти кількість
 					років.</a>
 			</li>
 			<li>
-				<a href="./tasks/task4.html">Задача №3. Дано вартість одиниці товару і кількість. Знайти загальну вартість та
+				<a target="_blank" href="./tasks/task4.html">Задача №3. Дано вартість одиниці товару і кількість. Знайти
+					загальну вартість та
 					ПДВ (5% від загальної вартості).</a>
 			</li>
 			<li>
-				<a href="./tasks/task5.html">Задача №4. Дано довжину у сантиметрах. Визначати скільки це метрів і
+				<a target="_blank" href="./tasks/task5.html">Задача №4. Дано довжину у сантиметрах. Визначати скільки це метрів
+					і
 					кілометрів.</a>
 			</li>
 			<li>
-				<a href="./tasks/task6.html">Задача №5. Дано кількість секунд, що пройшла від початку доби. Визначити скільки це
+				<a target="_blank" href="./tasks/task6.html">Задача №5. Дано кількість секунд, що пройшла від початку доби.
+					Визначити скільки це
 					годин і хвилин.</a>
 			</li>
 			<li>
-				<a href="./tasks/task7.html">Задача №6. З клавіатури вводяться вартість товару та кількість одиниць 3 товарів.
+				<a target="_blank" href="./tasks/task7.html">Задача №6. З клавіатури вводяться вартість товару та кількість
+					одиниць 3 товарів.
 					Обчислити вартість кожного товару
 					окремо та загальну вартість. Вивести чек (як у супермаркеті) використовуючи елементи розмітки.</a>
 			</li>
 			<li>
-				<a href="./tasks/task8.html">Задача 8. Знайти суму випадкового номера місяця (від 1 до 12) та випадкового номера
+				<a target="_blank" href="./tasks/task8.html">Задача 8. Знайти суму випадкового номера місяця (від 1 до 12) та
+					випадкового номера
 					дня (від 0 до 6).</a>
 			</li>
 		</ol>
