--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -15,9 +15,9 @@
 			border: none;
 		}
 
-		/* li {
-			list-style: none;
-		} */
+		li:not(:last-child) {
+			margin-bottom: 15px;
+		}
 
 		h1,
 		h2,
@@ -77,12 +77,6 @@
 		<ol>
 			<li>
 				<a target="_blank" href="./tasks/task1.html">Задча №0. Обчислити значення виразів.</a>
-				<ol>
-					<li>S<sub>1</sub>=a+12+b</li>
-					<li>S<sub>2</sub>=√(a+b/2a)</li>
-					<li>S<sub>3</sub>=∛(a+b)c</li>
-					<li>S<sub>4</sub>=sin(a/-b)</li>
-				</ol>
 			</li>
 			<li>
 				<a target="_blank" href="./tasks/task2.html">Задача №1. Знайти суму, добуток та частку двох дійсних чисел.
