--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
 			list-style: none;
 		}
 
+		li:not(:last-child) {
+			margin-bottom: 15px;
+		}
+
 		h1,
 		h2,
 		h3,
@@ -79,7 +83,7 @@
 		<main>
 			<ul>
 				<li>
-					<a target="_blank" href="./lesson2/index.html">Домашні завдання урок №2.</a>
+					<a target="_blank" href="./lesson2/index.html">Домашні завдання (Урок №2).</a>
 				</li>
 			</ul>
 		</main>
