Add new link for lesson 3 home tasks

--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 		<main>
 			<ul>
 				<li>
+					<a target="_blank" href="./lesson2/index.html">Домашні завдання (Урок №3).</a>
+				</li>
+				<li>
 					<a target="_blank" href="./lesson2/index.html">Домашні завдання (Урок №2).</a>
 				</li>
 			</ul>
