add new directiry for 3 lesson

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>JavaScript Course</title>
+	<title>Lesson 3</title>
 	<style>
 		*,
 		*::before,
@@ -13,10 +13,6 @@
 			margin: 0;
 			padding: 0;
 			border: none;
-		}
-
-		li {
-			list-style: none;
 		}
 
 		li:not(:last-child) {
@@ -69,27 +65,41 @@
 
 		.container {
 			max-width: 1100px;
+			margin: 0 auto;
 			padding-left: 15px;
 			padding-right: 15px;
-			margin: 0 auto;
 		}
 	</style>
 </head>
 <body>
 	<div class="container">
-		<header>
-			<h1>Виконані домашні завдання Павла Рожко.</h1>
-		</header>
-		<main>
-			<ul>
-				<li>
-					<a target="_blank" href="./lesson/index.html">Домашні завдання (Урок №3).</a>
-				</li>
-				<li>
-					<a target="_blank" href="./lesson2/index.html">Домашні завдання (Урок №2).</a>
-				</li>
-			</ul>
-		</main>
+		<h1>Домашні завдання (Урок №3).</h1>
+		<ol>
+			<li>
+				<a target="_blank" href="./tasks/task1.html"></a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task2.html"></a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task3.html"></a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task4.html"></a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task5.html"></a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task6.html"></a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task7.html"></a>
+			</li>
+			<li>
+				<a target="_blank" href="./tasks/task8.html"></a>
+			</li>
+		</ol>
 	</div>
 </body>
 </html>
