--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -76,10 +76,14 @@
 		<h1>Домашні завдання (Урок №3).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task1.html"></a>
+				<a target="_blank" href="./tasks/task1.html">Задача № 1. З клавіатури вводяться імена двох дітей та кількість у
+					них цукерок. Вивести не екран ім’я тієї дитини, у якої кількість
+					цукерок є більшою, або вивести, що кількість однакова.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task2.html"></a>
+				<a target="_blank" href="./tasks/task2.html">Задача № 2. З клавіатури вводиться ціна товару і кількість грошей.
+					Якщо грошей не вистачає, то відмовляємо у покупці, інакше, якщо
+					ще залишаються гроші, то пропонуємо купити лотерею за 4 грн.</a>
 			</li>
 			<li>
 				<a target="_blank" href="./tasks/task3.html"></a>
