--- a/lesson3/tasks/task6.html
+++ b/lesson3/tasks/task6.html
@@ -72,7 +72,7 @@
 		<h1>Задача №6. З клавіатури вводиться номер дня тижня. Вивести на екран назву дня.</h1>
 		<script>
 			//Крок 0. Позначення величин
-			// категорія водійського посвідчення - weekDay
+			// номер дня тижня - weekDay
 
 			//1. Введення величин
 			let weekDay = parseInt(prompt('Введіть номер дня тижня (від 1 до 7)'))
