Fixed <h1> tag text

--- a/lesson3/tasks/task4.html
+++ b/lesson3/tasks/task4.html
@@ -69,9 +69,8 @@
 </head>
 <body>
 	<div class="container">
-		<h1>З клавіатури вводиться вік людини. Вивести на екран ким він є (дитиною у садочку, школярем, студентом,
-			працівником,
-			пенсіонером).</h1>
+		<h1>Задача №4. З клавіатури вводиться вік людини. Вивести на екран ким він є (дитиною у садочку, школярем,
+			студентом, працівником, пенсіонером).</h1>
 		<script>
 			//Крок 0. Позначення величин
 			// вік людини - humanAge
