Fixed <h1> tag text

--- a/lesson3/tasks/task3.html
+++ b/lesson3/tasks/task3.html
@@ -69,7 +69,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Випадковим чином генерується число від 1 до 5. Спробуйте вгадати число за 2 спроби.</h1>
+		<h1>Задача № 3. Випадковим чином генерується число від 1 до 5. Спробуйте вгадати число за 2 спроби.</h1>
 		<script>
 			//Крок 0. Позначення величин
 			// випадкове число від 1 до 5 - randomNumber
