add links for tasks 3-7

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -86,22 +86,27 @@
 					ще залишаються гроші, то пропонуємо купити лотерею за 4 грн.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task3.html"></a>
+				<a target="_blank" href="./tasks/task3.html">Задача № 3. Випадковим чином генерується число від 1 до 5.
+					Спробуйте вгадати число за 2 спроби.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task4.html"></a>
+				<a target="_blank" href="./tasks/task4.html">Задача №4. З клавіатури вводиться вік людини. Вивести на екран ким
+					він є (дитиною у садочку, школярем,
+					студентом, працівником, пенсіонером).</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task5.html"></a>
+				<a target="_blank" href="./tasks/task5.html">Задача №5. З клавіатури вводиться назва категорії водія
+					(А-мотоцикл, В-легковий автомобіль, С-вантажний
+					автомобіль). Вивести на
+					екран назву транспортного засобу, яким він може керувати.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task6.html"></a>
+				<a target="_blank" href="./tasks/task6.html">Задача №6. З клавіатури вводиться номер дня тижня. Вивести на екран
+					назву дня.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task7.html"></a>
-			</li>
-			<li>
-				<a target="_blank" href="./tasks/task8.html"></a>
+				<a target="_blank" href="./tasks/task7.html">Задача №7. З клавіатури вводиться номер місяця. Вивести до якої
+					пори він відноситься.</a>
 			</li>
 		</ol>
 	</div>
