--- a/additionalTasks/lesson3/tasks/task1.html
+++ b/additionalTasks/lesson3/tasks/task1.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>First task (Lesson 3)</title>
+	<title>First additional task (Lesson 3)</title>
 	<style>
 		*,
 		*::before,
@@ -69,28 +69,27 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №1.З клавіатури вводяться імена двох дітей та кількість у них цукерок. Вивести не екран ім’я тієї дитини,
-			у якої кількість
-			цукерок є більшою, або вивести, що кількість однакова.</h1>
+		<h1>Задача №1.На екран виводиться меню: 1. Веселий, 2. Сумний, 3. Обурений. Користувач вводить номер пункту меню і
+			на екрані з’являється відповідне зображення смайла.</h1>
 		<script>
 			//Крок 0. Позначення величин
-			// Ім'я першої та дургої дитини firstChildName, secondChildName
-			// Кількість цукерок у кожної дитини firstChildSweetsQuantity, secondChildSweetsQuantity
-
+			// номер пункту меню - listItemNumber 
 			//1. Введення величин
-			let firstChildName = prompt("Ввеідіть ім'я першої дитини")
-			let firstChildSweetsQuantity = parseInt(prompt("Введіть кількість цукерок першї дитини"))
+			let listItemNumber = parseInt(prompt('Введіть один з номерів: 1. Веселий, 2. Сумний, 3. Обурений'))
+			let result
 
-			let secondChildName = prompt("Ввеідіть ім'я першої дитини")
-			let secondChildSweetsQuantity = parseInt(prompt("Введіть кількість цукерок першї дитини"))
-
-			//3. Розв'язок заадачі 
-			if (firstChildSweetsQuantity > secondChildSweetsQuantity)
-				document.write(`У ${firstChildName} цукерок більше!`)
-			else if (firstChildSweetsQuantity < secondChildSweetsQuantity)
-				document.write(`У ${secondChildName} цукерок більше!`)
-			else
-				document.write(`У ${firstChildName} та ${secondChildName} кількість цукерок однакова!`)
+			//2. Розв'язок заадачі 
+			switch (listItemNumber) {
+				case 1: result = "😀"
+					break;
+				case 2: result = "😟"
+					break;
+				case 3: result = "😡"
+					break;
+				default: result = "введено невірні дані"
+					break;
+			}
+			alert(result)
 		</script>
 	</div>
 </body>
