Changed title and h1 tag, deleted old code

--- a/additionalTasks/lesson3/tasks/task2.html
+++ b/additionalTasks/lesson3/tasks/task2.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>First additional task (Lesson 3)</title>
+	<title>2nd additional task (Lesson 3)</title>
 	<style>
 		*,
 		*::before,
@@ -69,27 +69,19 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Задача №1.На екран виводиться меню: 1. Веселий, 2. Сумний, 3. Обурений. Користувач вводить номер пункту меню і
-			на екрані з’являється відповідне зображення смайла.</h1>
+		<h1>Задача №2. Комп’ютер випадковим чином вибирає початок і кінець проміжку (проміжок повинен знаходитися в межах
+			від 1 до
+			100). Користувач вводить число і виграє, якщо число знаходиться у цьому проміжку, або розташоване від нього (від
+			лівого
+			або правого краю) не більше ніж на 10.</h1>
 		<script>
 			//Крок 0. Позначення величин
-			// номер пункту меню - listItemNumber 
+
 			//1. Введення величин
-			let listItemNumber = parseInt(prompt('Введіть один з номерів: 1. Веселий, 2. Сумний, 3. Обурений'))
-			let result
+
 
 			//2. Розв'язок заадачі 
-			switch (listItemNumber) {
-				case 1: result = "😀"
-					break;
-				case 2: result = "😟"
-					break;
-				case 3: result = "😡"
-					break;
-				default: result = "введено невірні дані"
-					break;
-			}
-			alert(result)
+
 		</script>
 	</div>
 </body>
