add commet to task 3

--- a/lesson3/tasks/task3.html
+++ b/lesson3/tasks/task3.html
@@ -79,7 +79,7 @@
 			let minNumber = 1, maxNumber = 5
 			let randomNumber = Math.floor(Math.random() * (maxNumber - minNumber + 1) + minNumber)
 
-			let firstAttempt, secondAttempt
+			let firstAttempt, secondAttempt //можна оголосити одну змінну і використати її повторно при перевірці
 
 			firstAttempt = parseInt(prompt('Вгадайте випадкове чило від 1 до 5 (перша спроба)'))
 
