--- a/lesson2/tasks/task1.html
+++ b/lesson2/tasks/task1.html
@@ -80,6 +80,9 @@
 			<li>S<sub>4</sub>=sin(a/-b)</li>
 		</ol>
 		<script>
+			/*!Зауваження від ментора.
+			"Майже хотіли спростити, тому записали let c = 12, хоча насправді це різні велечини."*/
+			/*
 			//1. Просвоєння значення змінній c
 			let c = 12
 
@@ -87,7 +90,7 @@
 			let a = parseInt(prompt('Введіть ціле число', '1'))
 			let b = parseInt(prompt('Введіть ціле число', '1'))
 
-			//3. Обчислюємо вирази 
+			//3. Обчислюємо вирази
 			let totalSum = a + c + b
 			let squareRoot = Math.sqrt((a + b) / (2 * a))
 			let cubeRoot = Math.cbrt((a + b) * c)
@@ -99,6 +102,24 @@
 				S<sub>2</sub> = ${squareRoot} <br>
 				S<sub>3</sub> = ${cubeRoot} <br>
 				S<sub>4</sub> = ${sine} <br>
+			`)
+			*/
+			//!New code
+			//1. Вводимо дані необхідні дані для змінних a, b c
+			let a = parseInt(prompt('Введіть ціле число для змінної a', '1'))
+			let b = parseInt(prompt('Введіть ціле число для змінної b', '1'))
+			let c = parseInt(prompt('Введіть ціле число для змінної c', '1'))
+			//2. Обчислюємо вирази
+			let totalSum = a + 12 + b
+			let squareRoot = Math.sqrt((a + b) / (2 * a))
+			let cubeRoot = Math.cbrt((a + b) * c)
+			let sine = Math.sin(a / -b)
+			//4. Виводимо результат обчислення виразів
+			document.write(`
+				<p>S<sub>1</sub> = ${totalSum}</p>
+				<p>S<sub>2</sub> = ${squareRoot.toFixed(2)}</p>
+				<p>S<sub>3</sub> = ${cubeRoot.toFixed(2)}</p>
+				<p>S<sub>4</sub> = ${sine.toFixed(2)}</p>
 			`)
 		</script>
 	</div>
