--- a/additionalTasks/lesson2/tasks/task10.html
+++ b/additionalTasks/lesson2/tasks/task10.html
@@ -77,10 +77,20 @@
 			Наприклад, дано 245 копійок, а вивести 2 грн 45 копійок.</h1>
 		<script>
 			// крок 0 позначення
-			// дійсне число - realNumber, ціле число - wholeNumber, дробова частина числа -  factorialNumber
+			// кількість монет номіланом 1 копійка - numberOfCoins
+			// кількість гривень - amountOfHryvnias
+			// кількість копійок - amountOfCoins
 			//1. Вводимо дані необхідні дані
+			let numberOfCoins = parseInt(prompt('кількість монет номіланом 1 копійка'))
+			console.log(numberOfCoins);
+			const coinsInHryvnia = 100
 			//2. Обчислюємо
-			//3. Виводимо результат 
+			// визачення остачі копійок
+			let amountOfCoins = numberOfCoins % coinsInHryvnia
+			// визначення цілої кількості гривень
+			let amountOfHryvnias = Math.floor(numberOfCoins / coinsInHryvnia)
+			//3. Виводимо результат
+			alert(`У вас є ${amountOfHryvnias} грн. ${amountOfCoins} коп.`)
 		</script>
 	</div>
 </body>
