--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -76,19 +76,30 @@
 		<h1>Домашні завдання (Урок №5).</h1>
 		<ol>
 			<li>
-				<a target="_blank" href="./tasks/task1.html">Задача № 1. </a>
+				<a target="_blank" href="./tasks/task1.html">Задача № 1(6). Вивести 3 таблиці (по 3 рядки і 3 стовпці у
+					кожній)</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task2.html">Задача № 2. </a>
+				<a target="_blank" href="./tasks/task2.html">Задача № 2(9). Користувач загадує число. Комп’ютер задає питання
+					поки не вгадає число користувача (використати confirm).</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task3.html">Задача № 3. .</a>
+				<a target="_blank" href="./tasks/task3.html">Задача № 3(11). Знайти суму 5 непарних чисел, що знаходяться між
+					заданими користувачем числами.</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task4.html">Задача №4. .</a>
+				<a target="_blank" href="./tasks/task4.html">Задача №4(12). адача 12. Ігровий автомат. Випадково вибираємо
+					зображення у 3 позиціях. Вибір у кожній позиції вибирається як одне з
+					чотирьох зображень. Вивести ці зображення і повідомити виграш користувача (три перших зображення 100 грн, три
+					других –
+					200, три третіх – 500, три четвертих зображення – 1000грн). Використати цикли і switch (для вибору зображення
+					за
+					номером).</a>
 			</li>
 			<li>
-				<a target="_blank" href="./tasks/task5.html">Задача №5. .</a>
+				<a target="_blank" href="./tasks/task5.html">Задача №5(13). Морський бій. Комп’ютер випадково розташовує
+					одиночний корабель на полі розміром N*M. Маючи К снарядів користувач
+					намагається потопити корабель.</a>
 			</li>
 		</ol>
 	</div>
