--- a/lesson5/tasks/task2.html
+++ b/lesson5/tasks/task2.html
@@ -72,7 +72,30 @@
 		<h1>Задача №1(6). Користувач загадує число. Комп’ютер задає питання поки не вгадає число користувача (використати
 			confirm).</h1>
 		<script>
+			// Алгоритм
+			// Попросити користувача загадати число від 1 до 100 за допомогою confirm = rememberedUserNumber
+			// Робимо перевірку якщо rememberedUserNumber === true
+			//  оголошуємо змінну correctAnswer та присвоюємо їй значення false
+			//  оголошуємо змінну attemptCounter для підрахунку кількості спроб
+			//    умова виконання поки correctAnswer === false
+			//    збільшуємо на 1 attemptCounter
+			//    генеруємо випадкове число randomNumber
+			//    присвоюємо змінній correctAnswer через confirm та запитуємо чи вірно вгадане число
 
+			let rememberedUserNumber = confirm('Загадайте число від 1 до 100')
+
+			if (rememberedUserNumber === true) {
+				let correctAnswer = false
+				let attemptCounter = 0
+				while (correctAnswer === false) {
+					attemptCounter++
+					let min = 1
+					let max = 100
+					let randomNumber = Math.floor(Math.random() * (max - min + 1) + min)
+					correctAnswer = confirm(`Ваше число = ${randomNumber}?`)
+				}
+				alert(`ПК вгадав з ${attemptCounter} разу`)
+			}
 		</script>
 	</div>
 </body>
